# RATCH

./: .gitignore  CONTRIBUTING.MD  Dockerfile  LICENSE.md  RATCH.mm  README.md  config.py  docker-compose.yml  gunicorn-cfg.py  requirements.txt  run.py  sample.env  setup.cfg  start_ratch.sh
Docs/: RATCH.mm  ratch.dbml
RATCH/: Dockerfile  __init__.py  auth.py  config.py  db.py  requirements.txt  rest_api.py
RATCH/database/: Docker-postgres  create_db.sh
RATCH/templates/auth/: register.html
RATCH/templates/webapp/: index.html
app/: Dockerfile  __init__.py  app.py  database.py  requirements.txt
app/api/: __init__.py  routes.py
app/api/routes/: __init__.py
app/base/: __init__.py  api.py  database_helpers.py  db_utils.py  forms.py  login_manager.py  models.py  routes.py  util.py  utils.py
app/base/forms/: __init__.py  accounts.py  projects.py  requirements.py  testcases.py
app/base/routes/: __init__.py  accounts.py  default.py  errors.py  projects.py  requirements.py  testcases.py
app/base/templates/accounts/: login.html  register.html
app/base/templates/errors/: not-found.html
app/base/templates/includes/: sidebar.html
app/base/templates/layouts/: base-fullscreen.html  base.html
app/base/templates/projects/: create.html
app/base/templates/requirements/: create.html
app/database/: models.py
app/db/: Docker-postgres  create_db.sh  database.py
app/home/: __init__.py
app/home/routes/: home.py
app/templates/: index.html
database/: Docker-postgres  create_db.sh
nginx/: ratch-app.conf
postgres/: create_db.sh
tests/: test_user.py
