[metadata]
name = RATCH
version = 0.1
url = https://git.bigolbrushmotors.org
license = GPL-3
maintainer = Joey Villa
maintainer_email = joey@avalar.tech
description = A requirements and test case management platform
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    flask
    flask-restful
    psycopg2-binary
    wheel

[options.extras_require]
test =
    unittest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app